06_rect/grade.txt
Grading at Wed Jul 22 11:40:49 UTC 2020
Attempting to compile rectangle.c
rectangle.c:25:8: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘struct’
 typdef struct rectangle rect;
        ^
rectangle.c:27:1: error: unknown type name ‘rectangle’
 rectangle canonicalize(rectangle r) {
 ^
rectangle.c:27:24: error: unknown type name ‘rectangle’
 rectangle canonicalize(rectangle r) {
                        ^
rectangle.c:39:1: error: unknown type name ‘rectangle’
 rectangle intersection(rectangle r1, rectangle r2) {
 ^
rectangle.c:39:24: error: unknown type name ‘rectangle’
 rectangle intersection(rectangle r1, rectangle r2) {
                        ^
rectangle.c:39:38: error: unknown type name ‘rectangle’
 rectangle intersection(rectangle r1, rectangle r2) {
                                      ^
rectangle.c:53:21: error: unknown type name ‘rectangle’
 void printRectangle(rectangle r) {
                     ^
rectangle.c: In function ‘main’:
rectangle.c:65:3: error: unknown type name ‘rectangle’
   rectangle r1;
   ^
rectangle.c:66:3: error: unknown type name ‘rectangle’
   rectangle r2;
   ^
rectangle.c:67:3: error: unknown type name ‘rectangle’
   rectangle r3;
   ^
rectangle.c:68:3: error: unknown type name ‘rectangle’
   rectangle r4;
   ^
rectangle.c:70:5: error: request for member ‘x’ in something not a structure or union
   r1.x = 2;
     ^
rectangle.c:71:5: error: request for member ‘y’ in something not a structure or union
   r1.y = 3;
     ^
rectangle.c:72:5: error: request for member ‘width’ in something not a structure or union
   r1.width = 5;
     ^
rectangle.c:73:5: error: request for member ‘height’ in something not a structure or union
   r1.height = 6;
     ^
rectangle.c:75:3: error: implicit declaration of function ‘printRectangle’ [-Werror=implicit-function-declaration]
   printRectangle(r1);
   ^
rectangle.c:77:5: error: request for member ‘x’ in something not a structure or union
   r2.x = 4;
     ^
rectangle.c:78:5: error: request for member ‘y’ in something not a structure or union
   r2.y = 5;
     ^
rectangle.c:79:5: error: request for member ‘width’ in something not a structure or union
   r2.width = -5;
     ^
rectangle.c:80:5: error: request for member ‘height’ in something not a structure or union
   r2.height = -7;
     ^
rectangle.c:84:5: error: request for member ‘x’ in something not a structure or union
   r3.x = -2;
     ^
rectangle.c:85:5: error: request for member ‘y’ in something not a structure or union
   r3.y = 7;
     ^
rectangle.c:86:5: error: request for member ‘width’ in something not a structure or union
   r3.width = 7;
     ^
rectangle.c:87:5: error: request for member ‘height’ in something not a structure or union
   r3.height = -10;
     ^
rectangle.c:91:5: error: request for member ‘x’ in something not a structure or union
   r4.x = 0;
     ^
rectangle.c:92:5: error: request for member ‘y’ in something not a structure or union
   r4.y = 7;
     ^
rectangle.c:93:5: error: request for member ‘width’ in something not a structure or union
   r4.width = -4;
     ^
rectangle.c:94:5: error: request for member ‘height’ in something not a structure or union
   r4.height = 2;
     ^
rectangle.c:99:3: error: unknown type name ‘rectangle’
   rectangle i = intersection(r1,r1);
   ^
rectangle.c:99:17: error: implicit declaration of function ‘intersection’ [-Werror=implicit-function-declaration]
   rectangle i = intersection(r1,r1);
                 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
